--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ input{
 	
 }
 
-@media screen and (max-width:50px){
+@media only screen and (min-width : 320px){
 	 body{
 		 background:pink;
 		 display:flex;
